# vit4hep

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
Util/: util.py
challenge_files/: evaluate.py
configs/: calochallenge.yaml  calochallenge_ds1.yaml  calochallenge_ds1_photons.yaml  calochallenge_ds1_photons_energy.yaml  calochallenge_ds1_pions.yaml  calochallenge_ds1_pions_energy.yaml  calochallenge_ds2.yaml  calochallenge_ds2_energy.yaml  calochallenge_ds2tods1ph_ft.yaml  calochallenge_ds2tods3_ft.yaml  calochallenge_ds3.yaml  calochallenge_ds3_energy.yaml  calochallenge_energy.yaml  calochallenge_log.yaml  calochallenge_lognoise.yaml  calochallenge_prenoise.yaml  calogan.yaml  calogan_ft.yaml  default.yaml
configs/calogan/: calogan.yaml  calogan_eplus_energy.yaml  calogan_ft.yaml
configs/calohadronic/: calohadronic.yaml  calohadronic_energy.yaml  calohadronic_ft.yaml
configs/lemurs/: lemurs.yaml  lemurs_energy_FCCeeALLEGRO.yaml  lemurs_energy_FCCeeCLD.yaml  lemurs_energy_ODD.yaml  lemurs_energy_Par04SciPb.yaml  lemurs_energy_Par04SiW.yaml
configs/model/: cinn_ds1.yaml  cinn_energy.yaml  cinn_nflows.yaml  cinn_nflows_ds3.yaml
configs/old_cards/: d2_shape_model_vit.yaml  (+4 more)
experiments/: base_experiment.py  base_model.py  base_plots.py  logger.py  misc.py  mlflow.py
models/: base_coupling.py  base_model.py  trajectories.py
nn/: aio.py  base_calo.py  base_calo2.py  base_coupling.py  base_onesided_calo.py  binned.py  glow_calo.py  permute.py  rqs_nflows.py  rqs_v2.py  spline_blocks.py  subnets.py  transformer_shape.py  vit.py
(+107 files in other folders)
